Changelog
=========

1.0.3 (unreleased)
------------------

- add missing custom rich text edit widget, work around import bug

1.0.2 (2011-08-17)
------------------

- enable sticky service tab button for all containers (from just publication)

1.0.1 (2011-08-10)
------------------

- fixed bug when acquiring the nearest IStickyContentService local utility

- created a default content template for Ghosts, so that their rendering
  is isolated from the rest.

1.0 (2011-07-07)
----------------

- Initial release